# LilGuy

./: .env  Cargo.toml  astro.json  astro.txt  directed_at_bot.json  emoji.json  greeter.json  greetings.txt  identity.txt  messages.json  opinions.json  summarizer.json  summary_summarizer.json
src/: ai.rs  astro.json  classifiers.rs  embeddings.rs  emoji.json  extensions.rs  greeter.json  main.rs
