[package]
name = "littleguy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
dotenvy = "0.15.6"
openai = "1.0.0-alpha.8"
tokio = { version = "1.26.0", features = ["full"] }
serenity = { verson = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
indoc = "2.0.1"
tokio-cron-scheduler = "*"
